# texmath

./: .gitignore  .travis.yml  Dockerfile  Makefile  OMML-BUGS  README.markdown  README.md  Setup.hs  cabal.project  changelog  changelog.md  default.nix  examples  flake.nix  math-template.docx  mathml2omml  omml2docx  run.sh  sample.html  stack.yaml  testTeXMathML.hs  texmath.cabal  texmath.hs  texmathml.cabal  tst.xml  unimath.txt
.github/workflows/: ci.yml
Text/: TeXMath.hs  TeXMathML.hs
Text/TeXMath/: Compat.hs  EntityMap.hs  LaTeX.hs  MMLDict.hs  Macros.hs  MathML.hs  MathMLParser.hs  MathMLWriter.hs  OMML.hs  Pandoc.hs  Parser.hs  Shared.hs  ToUnicode.hs  Types.hs  UniMath.hs  UnicodeToLaTeX.hs  Unidecode.hs
Text/TeXMathML/: Parser.hs  Writer.hs
cbits/: Char2TexCategory.c  Char2TexCommand.c  Char2TexComment.c  Char2TexName.c  Char2TexPkg.c  keyToASCII.c  valToASCII.c
cgi/: texmath-cgi.hs  texmath.html  texmath.xhtml  try.xhtml
extra/: texmath.hs
lib/mmldict/: Makefile  generateMMLDict.hs  mmldict.hs
lib/toascii/: Data.txt  Makefile  generate-cbits.hs
lib/totexmath/: Makefile  unicodetotex.hs  unimathsymbols.txt
lib/tounicode/: Makefile  mkToUnicode.hs  mkUnicodeTable.hs
man/: Makefile  texmath.1.md
man/man1/: texmath.1
server/: Main.hs  texmath.html
src/Text/: TeXMath.hs
src/Text/TeXMath/: Compat.hs  Shared.hs  TeX.hs  Types.hs
test/: test-texmath.hs
test/reader/mml/: 00000_C0_Controls_and_Basic_Latin.test  00080_C1_Controls_and_Latin-1_Supplement.test  00100_Latin_Extended-A.test  00400_Cyrillic.test  (+572 more)
test/regression/: 187.test  191.test  196.test  203.test  215.test  234.test  235.test  236a.test  236b.test  238.test  239.test  241.test  244.test  245a.test  245b.test  252.test  258.test  259.test  264.test  273.test  275.test  276.test  277.test  278.test  280.test  280b.test  291.test
test/roundtrip/: 00000_C0_Controls_and_Basic_Latin.native  00080_C1_Controls_and_Latin-1_Supplement.native  00100_Latin_Extended-A.native  00180_Latin_Extended-B.native  00250_IPA_Extensions.native  002B0_Spacing_Modifier_Letters.native  00300_Combining_Diacritical_Marks.native  00370_Greek_and_Coptic.native  00400_Cyrillic.native  01.native  01E00_Latin_Extended_Additional.native  01F00_Greek_Extended.native  02.native  02000_General_Punctuation.native  02070_Superscripts_and_Subscripts.native  020A0_Currency_Symbols.native  020D0_Combining_Diacritical_Marks_for_Symbols.native  02100_Letterlike_Symbols.native  02150_Number_Forms.native  02190_Arrows.native  02200_Mathematical_Operators.native  02300_Miscellaneous_Technical.native  02400_Control_Pictures.native  02440_Optical_Character_Recognition.native  02460_Enclosed_Alphanumerics.native  02500_Box_Drawing.native  02580_Block_Elements.native  025A0_Geometric_Shapes.native  02600_Miscellaneous_Symbols.native  02700_Dingbats.native  027C0_Miscellaneous_Mathematical_Symbols-A.native  027F0_Supplemental_Arrows-A.native  02900_Supplemental_Arrows-B.native  02980_Miscellaneous_Mathematical_Symbols-B.native  02A00_Supplemental_Mathematical_Operators.native  02B00_Miscellaneous_Symbols_and_Arrows.native  03.native  04.native  05.native  06.native  (+520 more)
test/writer/: starmath-review-status.tsv
tests/: 01.omml  01.xhtml  02.omml  02.xhtml  03.omml  03.tex  04.omml  04.xhtml  05.omml  05.tex  05.xhtml  06.omml  06.xhtml  07.omml  07.tex  07.xhtml  08.omml  08.tex  08.xhtml  09.omml  09.xhtml  10.omml  10.tex  10.xhtml  11.omml  11.tex  11.xhtml  12.omml  12.tex  12.xhtml  13.omml  13.tex  13.xhtml  14.omml  15.omml  15.tex  15.xhtml  16.omml  16.xhtml  17.omml  (+71 more)
tests/src/: 00000_C0_Controls_and_Basic_Latin.mml  00080_C1_Controls_and_Latin-1_Supplement.mml  00100_Latin_Extended-A.mml  00180_Latin_Extended-B.mml  00250_IPA_Extensions.mml  002B0_Spacing_Modifier_Letters.mml  00300_Combining_Diacritical_Marks.mml  00370_Greek_and_Coptic.mml  00400_Cyrillic.mml  01.omml  01.tex  01E00_Latin_Extended_Additional.mml  01F00_Greek_Extended.mml  02.omml  02.tex  02000_General_Punctuation.mml  02070_Superscripts_and_Subscripts.mml  020A0_Currency_Symbols.mml  020D0_Combining_Diacritical_Marks_for_Symbols.mml  02100_Letterlike_Symbols.mml  02150_Number_Forms.mml  02190_Arrows.mml  02200_Mathematical_Operators.mml  02300_Miscellaneous_Technical.mml  02400_Control_Pictures.mml  02440_Optical_Character_Recognition.mml  02460_Enclosed_Alphanumerics.mml  02500_Box_Drawing.mml  02580_Block_Elements.mml  025A0_Geometric_Shapes.mml  02600_Miscellaneous_Symbols.mml  02700_Dingbats.mml  027C0_Miscellaneous_Mathematical_Symbols-A.mml  027F0_Supplemental_Arrows-A.mml  02900_Supplemental_Arrows-B.mml  02980_Miscellaneous_Mathematical_Symbols-B.mml  02A00_Supplemental_Mathematical_Operators.mml  02B00_Miscellaneous_Symbols_and_Arrows.mml  03.omml  04.omml  (+618 more)
tests/writers/: 00000_C0_Controls_and_Basic_Latin.eqn  00000_C0_Controls_and_Basic_Latin.mml  00000_C0_Controls_and_Basic_Latin.omml  00000_C0_Controls_and_Basic_Latin.tex  00080_C1_Controls_and_Latin-1_Supplement.eqn  00080_C1_Controls_and_Latin-1_Supplement.mml  00080_C1_Controls_and_Latin-1_Supplement.omml  00080_C1_Controls_and_Latin-1_Supplement.tex  00100_Latin_Extended-A.eqn  00100_Latin_Extended-A.mml  00100_Latin_Extended-A.omml  00100_Latin_Extended-A.tex  00180_Latin_Extended-B.eqn  00180_Latin_Extended-B.mml  00180_Latin_Extended-B.omml  00180_Latin_Extended-B.tex  00250_IPA_Extensions.eqn  00250_IPA_Extensions.mml  00250_IPA_Extensions.omml  00250_IPA_Extensions.tex  002B0_Spacing_Modifier_Letters.eqn  002B0_Spacing_Modifier_Letters.mml  002B0_Spacing_Modifier_Letters.omml  002B0_Spacing_Modifier_Letters.tex  00300_Combining_Diacritical_Marks.eqn  00300_Combining_Diacritical_Marks.mml  00300_Combining_Diacritical_Marks.omml  00300_Combining_Diacritical_Marks.tex  00370_Greek_and_Coptic.eqn  00370_Greek_and_Coptic.mml  00370_Greek_and_Coptic.omml  00370_Greek_and_Coptic.tex  00400_Cyrillic.eqn  00400_Cyrillic.mml  00400_Cyrillic.omml  00400_Cyrillic.tex  01.mml  01.omml  01.tex  01.xhtml  (+2342 more)
tools/: README.md  dump-native-tex.hs  dump-starmath-variants.hs  make-starmath-review.py
(+3293 files in other folders)
