Name:                texmath
Version:             0.7
Cabal-Version:       >= 1.10
Build-type:          Simple
Synopsis:            Conversion between formats used to represent mathematics.
Description:         The texmath library provides functions to both read and
                     write formats used to represent mathematics.
                     The package is able to read and write both TeX math and
                     presentation MathML. Support is also included for writing
                     to OMML (Office Math Markup Language, used in Microsoft
                     Office) and to pandoc's native format (allowing conversion,
                     using pandoc, to a variety of different markup formats).
                     It supports basic LaTeX and AMS extensions,
                     and it can parse and apply LaTeX macros.
                     .
                     The package also includes several utility modules which
                     may be useful for anyone looking to manipulate either
                     Unicode or MathML.  For example, a copy of the MathML
                     operator dictionary is included.
                     .
                     Use the @executable@ flag to install a standalone
                     executable, @texmath@, that reads a LaTeX formula from
                     @stdin@ and writes MathML or OMML to @stdout@.
                     .
                     Use the @cgi@ flag to install a cgi script,
                     @texmath-cgi@.

Category:            Text
Stability:           Experimental
License:             GPL
License-File:        LICENSE
Author:              John MacFarlane, Matthew Pickering
Maintainer:          jgm@berkeley.edu
Homepage:            http://github.com/jgm/texmath
Extra-source-files:  README.markdown,
                     changelog,
                     cgi/texmath.xhtml,
                     tests/src/*.mml
                     tests/src/*.tex
                     tests/readers/mml/*.native
                     tests/readers/tex/*.native
                     tests/writers/*.xhtml
                     tests/writers/*.tex
                     tests/writers/*.omml

Source-repository head
  type:              git
  location:          git://github.com/jgm/texmath.git

Flag cgi
  description:       Compile cgi executable.
  default:           False

Flag executable
  description:       Compile test executable.
  default:           False

Library
    Build-depends:       xml, parsec >= 3, containers, pandoc-types >= 1.12.3.3 , mtl 
    if impl(ghc >= 6.10)
      Build-depends: base >= 4.5 && < 5, syb
    else
      Build-depends: base >= 3 && < 4
    Exposed-modules:     Text.TeXMath,
                         Text.TeXMath.Types,
                         Text.TeXMath.Readers.TeXMath,
                         Text.TeXMath.Writers.MathML,
                         Text.TeXMath.Writers.OMML,
                         Text.TeXMath.Writers.Pandoc,
                         Text.TeXMath.Readers.Macros,
                         Text.TeXMath.Unicode.ToUnicode,
                         Text.TeXMath.Readers.MathML,
                         Text.TeXMath.Readers.MathML.MMLDict,
                         Text.TeXMath.Readers.MathML.EntityMap,
                         Text.TeXMath.Unicode.ToTeXMath,
                         Text.TeXMath.Writers.TeXMath,
                         Text.TeXMath.Unicode.ToASCII
    Other-modules:       Text.TeXMath.Compat,
                         Text.TeXMath.Shared 
    if impl(ghc >= 6.12)
      Ghc-Options:     -Wall -fno-warn-unused-do-bind
    else
      Ghc-Options:     -Wall
    Ghc-Prof-Options:  -auto-all -caf-all
    Default-Language:    Haskell2010
    Hs-Source-Dirs:    src

Executable texmath
    Default-Language:    Haskell2010
    Main-is:             texmath.hs
    Hs-Source-Dirs:      extra
    if impl(ghc >= 6.12)
      Ghc-Options:     -Wall -fno-warn-unused-do-bind
    else
      Ghc-Options:     -Wall
    Ghc-Prof-Options:  -auto-all -caf-all
    if flag(executable)
      Buildable:         True
      Build-Depends:     base >= 4.2 && < 5, texmath, xml
    else
      Buildable:         False

Executable texmath-cgi
    Main-is:             texmath-cgi.hs
    Hs-Source-Dirs:      cgi
    Default-Language:    Haskell2010
    if impl(ghc >= 6.12)
      Ghc-Options:     -Wall -fno-warn-unused-do-bind
    else
      Ghc-Options:     -Wall
    Ghc-Prof-Options:  -auto-all -caf-all
    if flag(cgi)
      Build-Depends:     base >= 4.2 && < 5, texmath, xml, cgi, json, utf8-string
      Buildable:         True
    else
      Buildable:         False

Test-Suite test-texmath
    Type:                exitcode-stdio-1.0
    Main-Is:             test-texmath.hs
    Hs-Source-Dirs:      tests
    Build-Depends:       base >= 4.2 && < 5, process, directory, filepath,
                         texmath, xml, utf8-string, bytestring
    Default-Language:    Haskell2010
    Ghc-Options:         -Wall
