Name:                texmath
Version:             0.12.5
Cabal-Version:       >= 1.10
Build-type:          Simple
Synopsis:            Conversion between math formats.
Description:         The texmath library provides functions to read
  and write TeX math, presentation MathML, and OMML (Office
  Math Markup Language, used in Microsoft Office).  Support is also
  included for converting math formats to Gnu eqn and to pandoc's
  native format (allowing conversion, via pandoc, to a variety of
  different markup formats).  The TeX reader supports basic LaTeX
  and AMS extensions, and it can parse and apply LaTeX macros.
  (See <https://johnmacfarlane.net/texmath here> for a live demo of
  bidirectional conversion between LaTeX and MathML.)
  .
  The package also includes several utility modules which may be
  useful for anyone looking to manipulate either TeX math or
  MathML.  For example, a copy of the MathML operator dictionary is
  included.
  .
  Use the @executable@ flag to install a standalone
  executable, @texmath@, that converts formulas from one
  format to another. (Use the @--help@ flag for a description of all
  functionality).
  .
  Use the @server@ flag to install a web server, @texmath-server@,
  that exposes a JSON API allowing conversion of individual
  formulas and batches of formulas.

Category:            Text
Stability:           Experimental
License:             GPL-2
License-File:        LICENSE
Author:              John MacFarlane, Matthew Pickering
Maintainer:          jgm@berkeley.edu
Homepage:            http://github.com/jgm/texmath
Extra-source-files:  README.markdown
                     changelog
                     man/texmath.1.md
                     man/Makefile
                     man/man1/texmath.1
                     server/texmath.html
                     test/writer/mml/*.test
                     test/writer/omml/*.test
                     test/writer/tex/*.test
                     test/writer/eqn/*.test
                     test/reader/mml/*.test
                     test/reader/tex/*.test
                     test/reader/omml/*.test
                     test/regression/*.test
                     test/roundtrip/*.native
                     lib/totexmath/unicodetotex.hs
                     lib/totexmath/unimathsymbols.txt
                     lib/totexmath/Makefile
                     lib/mmldict/operatorDictionary.xsl
                     lib/mmldict/generateMMLDict.hs
                     lib/mmldict/Makefile
                     lib/tounicode/mkUnicodeTable.hs
                     lib/tounicode/Makefile

Source-repository head
  type:              git
  location:          git://github.com/jgm/texmath.git

Flag executable
  description:       Compile test executable.
  default:           False

Flag server
  description:       Compile webserver.
  default:           False

Library
    Build-depends:       base >= 4.11 && < 5,
                         syb >= 0.4.2 && < 0.8,
                         xml,
                         parsec >= 3,
                         containers,
                         pandoc-types >= 1.20 && < 1.23,
                         mtl >= 2.2.1,
                         text,
                         split

    Exposed-modules:     Text.TeXMath,
                         Text.TeXMath.Types,
                         Text.TeXMath.TeX,
                         Text.TeXMath.Readers.TeX,
                         Text.TeXMath.Readers.TeX.Macros,
                         Text.TeXMath.Readers.MathML,
                         Text.TeXMath.Readers.MathML.MMLDict,
                         Text.TeXMath.Readers.MathML.EntityMap,
                         Text.TeXMath.Readers.OMML,
                         Text.TeXMath.Writers.MathML,
                         Text.TeXMath.Writers.OMML,
                         Text.TeXMath.Writers.Pandoc,
                         Text.TeXMath.Writers.TeX,
                         Text.TeXMath.Writers.Eqn,
                         Text.TeXMath.Unicode.ToUnicode,
                         Text.TeXMath.Unicode.ToTeX,
                         Text.TeXMath.Unicode.Fonts
    Other-modules:       Text.TeXMath.Shared,
                         Text.TeXMath.Readers.TeX.Commands
                         Paths_texmath
    if impl(ghc >= 6.12)
      Ghc-Options:     -Wall -fno-warn-unused-do-bind
    else
      Ghc-Options:     -Wall
    Ghc-Prof-Options:  -fprof-auto-exported
    Default-Language:    Haskell2010
    Hs-Source-Dirs:    src

Executable texmath
    Default-Language:    Haskell2010
    Main-is:             texmath.hs
    Other-Modules:       Paths_texmath
    Hs-Source-Dirs:      extra
    if impl(ghc >= 6.12)
      Ghc-Options:     -Wall -fno-warn-unused-do-bind
    else
      Ghc-Options:     -Wall
    Ghc-Prof-Options:  -fprof-auto-exported
    if flag(executable)
      Buildable:         True
      Build-Depends:     base >= 4.11 && < 5,
                         texmath,
                         xml,
                         pandoc-types >= 1.20 && < 1.23,
                         aeson,
                         bytestring,
                         text,
                         pretty-show,
                         network-uri >= 2.6
    else
      Buildable:         False

Executable texmath-server
    Default-Language:    Haskell2010
    Main-is:             Main.hs
    Hs-Source-Dirs:      server
    if impl(ghc >= 6.12)
      Ghc-Options:     -Wall -fno-warn-unused-do-bind
    else
      Ghc-Options:     -Wall
    Ghc-Prof-Options:  -fprof-auto-exported
    if flag(server)
      Buildable:         True
      Build-Depends:     base >= 4.8 && < 5
                       , texmath
                       , aeson
                       , text
                       , xml
                       , servant-server
                       , wai
                       , warp
                       , optparse-applicative
                       , safe

    else
      Buildable:         False

Test-Suite test-texmath
    Type:                exitcode-stdio-1.0
    Main-Is:             test-texmath.hs
    Hs-Source-Dirs:      test
    Build-Depends:       base >= 4.11 && < 5,
                         texmath,
                         directory > 1.2.5,
                         filepath,
                         pretty-show,
                         bytestring,
                         xml,
                         text,
                         tasty,
                         tasty-golden,
                         tagged
    Default-Language:    Haskell2010
    Ghc-Options:         -Wall -threaded
